samples/_failures_safe/1761165307_ac062d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_847aa409.c: In function ‘main’:
./samples/SAFE/__tmp_847aa409.c:150:5: error: expected expression at end of input
  150 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_847aa409.c:150:5: error: expected declaration or statement at end of input
